# word_sauce

./: .editorconfig  .pre-commit-config.yaml  README.md  main.py  prompt.py  pyproject.toml  requirements-dev.txt  search.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
src/word_sauce/: __init__.py  search.py
tests/: search_test.py
word_sauce/: search.py
