[metadata]
name = word_sauce
version = 1.0.0
description = A word sauce puzzle
long_description = file: README.md
long_description_content_type = text/markdown
author = Victor I. Afolabi
author_email = javafolabi@gmail.com
url = https://github.com/victor-iyi/word_sauce
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: Apache 2.0
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operation System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = game word-sauce puzzle
requirements_file = requirements.txt

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    word_sauce=word_sauce
install_requires =
    nltk
zip_safe = True

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    word_sauce = main:main

[options.extras_require]
tests* =
    mypy>=0.910
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
word_sauce =
    py.typed

[coverage:run]
plugins = covdefaults

[mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[bdist_wheel]
universal = True
